logs/django-qshop.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_qshop-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/qshop'...
Listing './lib/python3.5/site-packages/qshop/cart'...
Compiling './lib/python3.5/site-packages/qshop/cart/views.py'...
***   File "./lib/python3.5/site-packages/qshop/cart/views.py", line 53
    except ItemTooMany, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/qshop/locale'...
Listing './lib/python3.5/site-packages/qshop/locale/lv'...
Listing './lib/python3.5/site-packages/qshop/locale/lv/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/qshop/locale/ru'...
Listing './lib/python3.5/site-packages/qshop/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/qshop/payment_vendors'...
Listing './lib/python3.5/site-packages/qshop/payment_vendors/banktransfer'...
Listing './lib/python3.5/site-packages/qshop/payment_vendors/paypal'...
Compiling './lib/python3.5/site-packages/qshop/payment_vendors/views.py'...
***   File "./lib/python3.5/site-packages/qshop/payment_vendors/views.py", line 38
    print request.POST
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/qshop/payment_vendors/webmoney'...
Listing './lib/python3.5/site-packages/qshop/static'...
Listing './lib/python3.5/site-packages/qshop/static/admin'...
Listing './lib/python3.5/site-packages/qshop/static/admin/qshop'...
Listing './lib/python3.5/site-packages/qshop/static/admin/qshop/css'...
Listing './lib/python3.5/site-packages/qshop/static/admin/qshop/js'...
Listing './lib/python3.5/site-packages/qshop/templates'...
Listing './lib/python3.5/site-packages/qshop/templates/qshop'...
Listing './lib/python3.5/site-packages/qshop/templates/qshop/admin'...
Listing './lib/python3.5/site-packages/qshop/templates/qshop/admin/actions'...
Listing './lib/python3.5/site-packages/qshop/templates/qshop/cart'...
Listing './lib/python3.5/site-packages/qshop/templates/qshop/mails'...
Listing './lib/python3.5/site-packages/qshop/templates/qshop/payment_vendors'...
Listing './lib/python3.5/site-packages/qshop/templatetags'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
